# ImageScatter

./: CMakeLists.txt  README.md
include/: AnimationEngine.h  Constants.h  MyRandom.h  Particle.h  ParticleVector.h  Plugin.h  PluginInterface.h  WindowsFunctions.h
include/Interfaces/: AnimationEngineInterface.h  MyVector.h  OsObject.h  ParticleInterface.h  PluginInterface.h
include/OsSpecific/: Plugin.h  WindowsObject.h
include/engine/: AnimationEngine.h  Particle.h  PluginState.h
include/utils/: PlugFunctions.h
lib/: CMakeLists.txt  plugs.cpp
shaders/: fs.glsl  vs.glsl
src/: AnimationEngine.cpp  Particle.cpp  Plugin.cpp  WindowsObject.cpp  main.cpp
src/OsSpecific/: CMakeLists.txt  Plugin.cpp
src/engine/: AnimationEngine.cpp  Particle.cpp
